# ohtu-2021-tehtavat

./: PULL.md  README.md  retro.md
viikko1/nhl-statistics-1/src/: index.py  statistics.py
viikko2/poetry-web/: pyproject.toml
viikko2/project-reader/src/: project_reader.py
viikko2/verkkokauppa-1/: pyproject.toml
viikko2/verkkokauppa-1/src/: index.py  kauppa.py  kirjanpito.py  pankki.py  varasto.py  viitegeneraattori.py
viikko3/hello-robot/src/: CounterLibrary.py
viikko3/nhl-reader/src/: index.py  player.py  player_reader.py  player_stats.py
viikko3/web-login-robot/: run_robot_tests.sh
viikko4/int-joukko/src/: index.py  int_joukko.py
viikko4/tennis/src/: index.py  tennis_game.py
viikko4/verkkokauppa/: .coverage  .gitignore  pyproject.toml
viikko4/verkkokauppa/htmlcov/: _Users_TILAI_Library_Caches_pypoetry_virtualenvs_verkkokauppa-UW6Z1SXz-py3_8_lib_python3_8_site-packages__pytest___init___py.html  _Users_TILAI_Library_Caches_pypoetry_virtualenvs_verkkokauppa-UW6Z1SXz-py3_8_lib_python3_8_site-packages__pytest__argcomplete_py.html  _Users_TILAI_Library_Caches_pypoetry_virtualenvs_verkkokauppa-UW6Z1SXz-py3_8_lib_python3_8_site-packages__pytest__code___init___py.html  (+101 more)
viikko5/: tehtava1.txt
viikko6/: tehtava1.txt  tehtava1b.txt
viikko7/: README.md  referaatti.md
viikko7/kivi-paperi-sakset/: pyproject.toml
viikko7/kivi-paperi-sakset/src/: KPS.py  index.py  konsoli_io.py  kps_parempi_tekoaly.py  kps_pelaaja_vs_pelaaja.py  kps_tekoaly.py  peli.py  tekoaly.py
viikko7/kivi-paperi-sakset/src/tests/: KPS_test.py  tuomari_test.py
(+17 files in other folders)
